--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
     open-in-view: true
     generate-ddl: true
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
