--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -22,13 +22,32 @@ spec:
             - containerPort: 8081
           env: # Setting Environmental Variables
             - name: DB_HOST   # Setting Database host address from configMap
-              value: mysql
+              #value: mysql
+              valueFrom:
+                configMapKeyRef:
+                  name: db-config
+                  key: host
+
             - name: DB_NAME  # Setting Database name from configMap
-              value: user_management_system_db
+              #value: user_management_system_db
+              valueFrom:
+                configMapKeyRef:
+                  name: db-config
+                  key: dbName
+
             - name: DB_USERNAME  # Setting Database username from Secret
-              value: root
+              #value: root
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secrets
+                  key: username
+
             - name: DB_PASSWORD # Setting Database password from Secret
-              value: root
+              #value: root
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secrets
+                  key: password
 ---
 
 apiVersion: v1 # Kubernetes API version
