--- a/db-deployment.yaml
+++ b/db-deployment.yaml
@@ -55,9 +55,18 @@ spec:
           name: mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
-              value: root
+              #value: root
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secrets
+                  key: password
+
             - name: MYSQL_DATABASE
-              value: user_management_system_db
+              #value: user_management_system_db
+              valueFrom:
+                configMapKeyRef:
+                  name: db-config
+                  key: dbName
           ports:
             - containerPort: 3306
               name: mysql
